<resources>
    <string name="app_name">Android in the Middle</string>
    <string name="start_scan_message">Press the refresh button to start scanning for hosts</string>
    <string name="ip">IP:</string>
    <string name="mac">MAC:</string>
    <string name="vendor">Vendor:</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="no_host_found">No host found. Press the refresh button to try again!</string>
    <string name="error_scanner_not_connected_to_wifi">ERROR: You must be connected to WiFi in order to scan the network.</string>
    <string name="error_copy_binaries">ERROR: Unable to copy binaries</string>
    <string name="please_wait">Please, wait…</string>
    <string name="message_copying_binaries">Copying binaries from asset folder to app data folder…</string>
    <string name="device_info">Device info</string>
    <string name="button_kill_connection">KILL CONNECTION</string>
    <string name="button_sniff_all">SNIFF ALL</string>
    <string name="button_sniff_messaging_apps">SNIFF MESSAGING APPS</string>
    <string name="button_check_host_status">CHECK HOST STATUS</string>
    <string name="host_reachable_check">Checking if host is reachable…</string>
    <string name="host_reachable_message">Host is reachable.</string>
    <string name="host_unreachable_message">Warning: Host is unreachable.</string>
    <string name="gateway">(Gateway)</string>
    <string name="sniff_service">SniffService</string>
    <string name="change_network_interface">Change Network Interface</string>
    <string name="default_choice">Default</string>
    <string name="error_sniff_all_module">"Error in SnifAllModule: "</string>
    <string name="mitm_started">MitM started…</string>
    <string name="stop_mitm">Stop MitM</string>
    <string name="title_set_capture_filename">Set capture file name</string>
    <string name="error_illegal_character">"Error: illegal character: "</string>
    <string name="error_write_permissions">Error: no write permissions. Please, give this app write permissions in order to continue.</string>
    <string name="error_unable_create_folder">Error: unable to create folder pcaps in external storage.</string>
    <string name="error_permission_denied">Error: write and read permissions are needed to capture packets!\nYou will not be able to capture packets.</string>
    <string name="module_sniffall_title">Sniff All</string>
    <string name="module_sniffall_message">Capturing all traffic…</string>
    <string name="module_killconnection_message">Killing connection…</string>
    <string name="module_killconnection_title">Kill Connection</string>
    <string name="module_mitm_title">MitM Module</string>
    <string name="module_mitm_message">Generic MitM module</string>
    <string name="save_capture">Save capture</string>
    <string name="error_parsing_pcap">"Error parsing pcap file: "</string>
    <string name="message_parsed_pcap">Successfully parsed %d bytes</string>
    <string name="parsing_pcap_message">Parsing pcap file…</string>
    <string name="stop_parsing_pcap">Stop parsing pcap</string>
    <string name="parse_capture">Parse capture</string>
    <string name="parse_pcap_service">Parse Pcap service</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="ip_title">IP</string>
    <string name="port_title">PORT</string>
    <string name="protocol_title">Protocol:</string>
    <string name="length">Length:</string>
    <string name="protocol_udp">UDP</string>
    <string name="protocol_tcp">TCP</string>
    <string name="stopped">Stopped</string>
    <string name="error_kill_module">Error in Kill Connection Module</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="telegram">Telegram</string>
    <string name="line">LINE</string>
    <string name="open_pcap_description">Click on the button to open an existing *.pcap file to analyze</string>
    <string name="choose_pcap">Choose .pcap</string>
    <string name="scanner">Scanner</string>
    <string name="open_pcap">Open pcap</string>
    <string name="follow_tcp_stream">Follow TCP stream</string>
    <string name="follow_tcp_traffic_between_hosts">Follow tcp traffic between hosts</string>
    <string name="follow_tcp_and_udp_traffic_between_hosts">Follow TCP and UDP traffic between hosts</string>
    <string name="follow_udp_stream">Follow UDP stream</string>
    <string name="follow_udp_traffic_between_hosts">Follow UDP traffic between hosts</string>
    <string name="inspect_packet">Inspect packet</string>
    <string name="header_length">Header length</string>
    <string name="id">Id</string>
    <string name="offset">Offset</string>
    <string name="checksum">Checksum</string>
    <string name="type_of_service">Type of service</string>
    <string name="ttl">TTL</string>
    <string name="version">Version</string>
    <string name="ip_details">IP DETAILS</string>
    <string name="tcp_details">TCP DETAILS</string>
    <string name="udp_details">UDP DETAILS</string>
    <string name="source_port_title">Source port</string>
    <string name="destination_port_title">Destination port</string>
    <string name="sequence_number">Sequence number</string>
    <string name="ack_number">Ack number</string>
    <string name="data_offset">Data offset</string>
    <string name="window">Window</string>
    <string name="urgent_ptr">Urgent PTR</string>
    <string name="ack_sequence">ACK sequence</string>
    <string name="urg">URG</string>
    <string name="cwr">CWR</string>
    <string name="ece">ECE</string>
    <string name="fin">FIN</string>
    <string name="psh">PSH</string>
    <string name="reserved_bits_1">Reserved Bits 1</string>
    <string name="rst">RST</string>
    <string name="syn">SYN</string>
    <string name="packet">Packet</string>
    <string name="payload">PAYLOAD</string>
    <string name="monitoring_pcap_file">Monitoring pcap file: %s</string>
    <string name="no_tcp_flow_data">No TCP flow data. Try inspecting single packet.</string>
    <string name="module_sniffwhatsapp_title">WhatsApp Sniffer</string>
    <string name="module_sniffwhatsapp_message">Sniffing WhatsApp traffic…</string>
    <string name="whatsapp_cidr_update_message">Trying to update whatsapp server info…</string>
    <string name="error_cidr_retrieve">Error: unable to retrieve WhatsApp net lists!</string>
    <string name="error_cidr_parse">"Error: unable to parse cidr file! "</string>
    <string name="ok">OK</string>
    <string name="module_snifftelegram_title">Telegram Sniffer</string>
    <string name="module_snifftelegram_message">Sniffing Telegram traffic…</string>
    <string name="error_retrieve_announced_prefixes">Unable to retrieve announced prefixes.</string>
    <string name="module_sniffmxit_title">Mxit Sniffer</string>
    <string name="module_sniffmxit_message">Sniffing Mxit traffic…</string>
    <string name="mxit">Mxit</string>
    <string name="vkontakte">VKontakte</string>
    <string name="module_sniffvk_title">Vkontakte Sniffer</string>
    <string name="module_sniffvk_message">Sniffing VKontakte traffic…</string>
    <string name="error_unable_parse_prefixes">Error: unable to parse announced prefixes</string>
    <string name="module_sniffqq_message">Sniffing QQ traffic…</string>
    <string name="module_sniffqq_title">QQ Sniffer</string>
    <string name="module_snifftextplus_title">textPlus Sniffer</string>
    <string name="module_snifftextplus_message">Sniffing textPlus traffic…</string>
    <string name="qq">QQ</string>
    <string name="textplus">textPlus</string>
    <string name="module_snifftalkray_message">Sniffing Talkray traffic…</string>
    <string name="module_snifftalkray_title">Talkray Sniffer</string>
    <string name="module_sniffbbm_message">Sniffing BBM traffic…</string>
    <string name="module_sniffbbm_title">BBM Sniffer</string>
    <string name="module_sniffinstagram_message">Sniffing Instagra traffic…</string>
    <string name="module_sniffinstagram_title">Instagra Sniffer</string>
    <string name="module_sniffyahoomessenger_message">Sniffing Yahoo Messenger traffic…</string>
    <string name="module_sniffyahoomessenger_title">Yahoo Messenger Sniffer</string>
    <string name="module_sniffmaai_message">Sniffing Maai traffic…</string>
    <string name="module_sniffmaai_title">Maai Sniffer</string>
    <string name="module_sniffgroupme_message">Sniffing GroupMe traffic…</string>
    <string name="module_sniffgroupme_title">GroupMe Sniffer</string>
    <string name="module_sniffkakaotalk_message">Sniffing KakaoTalk traffic…</string>
    <string name="module_sniffkakaotalk_title">KakaoTalk Sniffer</string>
    <string name="module_sniffnimbuzz_message">Sniffing Nimbuzz traffic…</string>
    <string name="module_sniffnimbuzz_title">Nimbuzz Sniffer</string>
    <string name="module_sniffhike_message">Sniffing Hike traffic…</string>
    <string name="module_sniffhike_title">Hike Sniffer</string>
    <string name="module_sniffzalo_message">Sniffing Zalo traffic…</string>
    <string name="module_sniffzalo_title">Zalo Sniffer</string>
    <string name="module_sniffimo_message">Sniffing imo traffic…</string>
    <string name="module_sniffimo_title">imo Sniffer</string>
    <string name="talkray">Talkray</string>
    <string name="bbm">BBM</string>
    <string name="instagram">Instagram</string>
    <string name="yahoo_messenger">Yahoo Messenger</string>
    <string name="maai">Maai</string>
    <string name="groupme">GroupMe</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="nimbuzz">Nimbuzz</string>
    <string name="hike">Hike</string>
    <string name="zalo">Zalo</string>
    <string name="imo">imo</string>
    <string name="ip_packet_title">IP Packet %1$d/%2$d</string>
    <string-array name="options_array">
        <item>Network Interface</item>
        <item>Clean cache</item>
        <item> </item>
    </string-array>
    <string-array name="drawer_list">
        <item>Scanner</item>
        <item>Open .pcap file</item>
    </string-array>
</resources>