<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_small">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/inspect_packet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/inspect_packet"
        tools:textAllCaps="true" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/follow_tcp_stream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/follow_tcp_stream"
        android:visibility="gone"
        tools:textAllCaps="true" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/follow_tcp_traffic_between_hosts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/follow_tcp_traffic_between_hosts"
        android:visibility="gone"
        tools:textAllCaps="true" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/follow_tcp_and_udp_traffic_between_hosts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/follow_tcp_and_udp_traffic_between_hosts"
        android:visibility="gone"
        tools:textAllCaps="true" />

</LinearLayout>
