<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/fragment_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.v7.widget.CardView
            android:id="@+id/button_whatsapp"
            style="@style/CardViewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/whatsapp">

            <TextView
                style="@style/TextEngraved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_standard"
                android:gravity="center"
                android:text="@string/whatsapp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/button_telegram"
            style="@style/CardViewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/telegram">

            <TextView
                style="@style/TextEngraved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_standard"
                android:gravity="center"
                android:text="@string/telegram" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/button_mxit"
            style="@style/CardViewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/mxit">

            <TextView
                style="@style/TextEngraved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_standard"
                android:gravity="center"
                android:text="@string/mxit" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/button_vk"
            style="@style/CardViewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/vk">

            <TextView
                style="@style/TextEngraved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_standard"
                android:gravity="center"
                android:text="@string/vkontakte" />
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>