<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview"
    style="@style/CardViewButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small">

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/source_address_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/source" />

            <TextView
                android:id="@+id/destination_address_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/destination" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_1"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ip_source"
                style="@style/TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="192.168.1.1" />

            <TextView
                android:id="@+id/ip_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip_title" />

            <TextView
                android:id="@+id/ip_destination"
                style="@style/TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                tools:text="192.168.1.1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_2"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/port_source"
                style="@style/TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="80" />

            <TextView
                android:id="@+id/port_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port_title" />

            <TextView
                android:id="@+id/port_destination"
                style="@style/TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                tools:text="443" />

        </LinearLayout>

        <View
            android:id="@+id/separator_line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/linear_layout_3"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/protocol_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/separator_line"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:text="@string/protocol_title" />

        <TextView
            android:id="@+id/protocol"
            style="@style/TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/protocol_title"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_toEndOf="@id/protocol_title"
            android:layout_toRightOf="@id/protocol_title"
            tools:text="TCP" />

        <TextView
            android:id="@+id/length_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/protocol_title"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:text="@string/length" />

        <TextView
            android:id="@+id/length"
            style="@style/TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/length_title"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_toEndOf="@id/length_title"
            android:layout_toRightOf="@id/length_title"
            tools:text="2839" />
    </RelativeLayout>
</android.support.v7.widget.CardView>